# simple

./: README.md  default.nix  dev.nix  stack.yaml
simple/: default.nix  simple.cabal
simple-aeson/: default.nix  dev.nix  simple-aeson.cabal
simple-aeson/src/Simple/: Aeson.hs
simple-core/: default.nix  dev.nix  simple.cabal
simple-core/src/: Simple.hs
simple-snap/: default.nix  dev.nix  simple-snap.cabal
simple-snap/src/Simple/: Snap.hs
simple-string/: default.nix  dev.nix  simple-string.cabal
simple-string/src/Simple/: String.hs
simple/src/: Simple.hs
simple/src/Simple/: Default.hs
test-simple/: default.nix  test-simple.cabal
test-simple/app/: Main.hs
