name:                simple-string
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Simple.String
  build-depends:       base >= 4.7 && < 5
                      , simple-core
                      , bytestring

  default-language:    Haskell2010
