name:                simple
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/simple#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Simple
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , transformers
                     , bytestring
                     , exceptions

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
