name:                test-simple
build-type:          Simple
version: 1.0.0
cabal-version:       >=1.10

executable simple
  hs-source-dirs:      app
  Main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , snap
                     , simple
                     , simple-snap
                     , transformers
                     , exceptions
                     , simple-aeson
                     , simple-string
                     , aeson
                     , text
                     , lens

  default-language:    Haskell2010
